test/org/midica/testfiles/failing/call-elsif.midica
INCLUDE inc/instruments.midica

VAR $x = 1

{ if=$x
	0  c  /4
}
CALL test elsif=$x

FUNCTION test
	0  c  /4
END